--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,15 +3,18 @@ project:
   output-dir: docs
 
 website:
-  title: "lovutanlov"
+  title: "githubpage"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
-  
+
 format:
   html:
-    theme:cosmo
+    theme: cosmo
     css: styles.css
     toc: true
+
+
+
